Refactor: Move all the undo classes out of artwork to separate undo manager.